第六次提交，完成与前端设备的数据连通